--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ apply plugin: "jacoco"
 
 mainClassName = "fi.halooconsulting.ohturef.EntryKt"
 
+
+project.ext {
+    cucumberVersion = '1.2.5'
+}
+
 buildscript {
     ext.kotlin_version = "1.1.1"
     repositories {
@@ -26,6 +31,8 @@ dependencies {
     compile "com.sparkjava:spark-core:2.5.5"
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
 
+    testCompile 'info.cukes:cucumber-java:' + cucumberVersion
+    testCompile 'info.cukes:cucumber-junit:' + cucumberVersion
     testCompile 'junit:junit:4.12'
 }
 
