--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,13 @@ dependencies {
 run {
     standardInput = System.in
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
