--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -25,6 +26,10 @@ buildscript {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile group: 'com.j256.ormlite', name: 'ormlite-core', version: '4.23'
@@ -34,6 +39,10 @@ dependencies {
     testCompile 'info.cukes:cucumber-java:' + cucumberVersion
     testCompile 'info.cukes:cucumber-junit:' + cucumberVersion
     testCompile 'junit:junit:4.12'
+
+    compile 'io.requery:requery:1.2.1'
+    compile 'io.requery:requery-kotlin:1.2.1'
+    kapt 'io.requery:requery-processor:1.2.1'
 }
 
 run {
