the dumb thing didn't work

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,5 @@ jar {
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
-task stage(dependsOn: ['build', 'clean', 'run'])
+task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
-run.mustRunAfter build
