--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     compile 'io.requery:requery:1.1.2'
     compile 'io.requery:requery-kotlin:1.2.1'
     kapt 'io.requery:requery-processor:1.2.1'
+
+    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
 }
 
 run {
