--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ mainClassName = "fi.halooconsulting.ohturef.EntryKt"
 
 project.ext {
     cucumberVersion = '1.2.5'
-    seleniumVersion = '2.41.0'
+    seleniumVersion = '3.4.0'
 }
 
 buildscript {
@@ -49,11 +49,9 @@ dependencies {
     testCompile 'info.cukes:cucumber-java:' + cucumberVersion
     testCompile 'info.cukes:cucumber-junit:' + cucumberVersion
     testCompile 'junit:junit:4.12'
-    testCompile group: 'org.fluentlenium', name: 'fluentlenium-core', version: '0.10.3'
-    testCompile group: 'org.fluentlenium', name: 'fluentlenium-assertj', version: '0.10.3'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-api', version:seleniumVersion
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version:seleniumVersion
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.26'
+    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version:seleniumVersion
 
     compile 'org.xerial:sqlite-jdbc:3.15.1'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.0.0'
