--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     testCompile group: 'org.fluentlenium', name: 'fluentlenium-assertj', version: '0.10.3'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-api', version:seleniumVersion
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version:seleniumVersion
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.26'
+    testCompile group: 'com.saucelabs', name: 'sauce_junit', version: '2.1.21'
 
     compile 'org.xerial:sqlite-jdbc:3.15.1'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.0.0'
