--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ env:
 addons:
   sauce_connect: true
 before_script:
-  - ./gradlew run
+  - nohup ./gradlew run < /dev/null > /dev/null 2> /dev/null &
   - sleep 10
